# NFC-scanner

./: .env.example  Cargo.toml  database.db  readme.md
.obsidian/: workspace.json
bruno/: bruno.json
bruno/auth/: login.bru
bruno/entities/: create entities.bru  delete.bru  entity by tag.bru  entity.bru  get entities by tag_id.bru  get entities.bru  get entity by tag.bru  get entity.bru  update.bru
bruno/environments/: local dev.bru
bruno/users/: create user.bru
migrations/: 001_initial.sql  001_user.sql  002_initial.sql
src/: main.rs
src/controllers/: api.rs  auth_routes.rs  entity_routes.rs  errors.rs  mod.rs  user_routes.rs
src/database/: auth_dao.rs  db.rs  entity_dao.rs  errors.rs  mod.rs  session_dao.rs  user_dao.rs
src/services/: auth_service.rs  entity_service.rs  errors.rs  mod.rs  user_service.rs
